<resources>

    <string name="facebook_app_id">2041768342704216</string>
    <string name="fb_login_protocol_scheme">fb2041768342704216</string>
    <string name="app_name">Walk-N-Earn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_blank"></string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_oldpassword">Old Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_temp_password">Temporary password (sent in mail)</string>
    <string name="prompt_name">Display name(Optional)</string>
    <string name="prompt_newname">New display name</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_change_name">Change Name</string>
    <string name="action_continue">Continue</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_email">Invalid username</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_lengthy_password">Password cannot exceed 20 characters</string>
    <string name="error_lengthy_name">Name cannot exceed 20 characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_user">New User?</string>
    <string name="returning_user">Already have an account?</string>
    <string name="login_options">Sign in with</string>
    <string name="signup_options">Sign up with</string>
    <string name="facebook_signup_success">Facebook Sign Up successful</string>
    <string name="internet_unavailable">Internet not available</string>
    <string name="action_cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="t_and_c">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="fb_invite">Invite friends on Facebook</string>
    <string name="contacts_invite">Invite friends from Contacts</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="notifications">Notifications</string>
    <string name="prompt_feedback">Write your feedback</string>
    <string name="action_feedback">Send Feedback</string>

    <string name="invitation_title">WalkNEarn Invitation</string>
    <string name="invitation_message">Would you like to earn free food for being fit and healthy, then try WalkNEarn</string>
    <string name="invitation_deep_link">http://google.com</string>
    <string name="invitation_cta">Invitation CTA</string>

    <string-array name="settings_options">
        <item>Profile picture</item>
        <item>Change Password</item>
        <item>Change Name</item>
        <item>Notifications</item>
        <item>Invite friends from Contacts</item>
        <item>Invite friends on Facebook</item>
        <item>Send Feedback</item>
        <item>Terms and Conditions</item>
        <item>Privacy Policy</item>
        <item>Logout</item>
    </string-array>

    <string-array name="time_spinner">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="details_spinner">
        <item>Steps</item>
        <item>Calories</item>
        <item>Distance</item>
    </string-array>

    <string-array name="graph_descriptions">
        <item># of steps walked/4 hours</item>
        <item># of steps walked/day</item>
        <item># of steps walked/week</item>
        <item>calories burned/4 hours</item>
        <item>calories burned/day</item>
        <item>calories burned/week</item>
        <item>distance walked/4 hours</item>
        <item>distance walked/day</item>
        <item>distance walked/week</item>
    </string-array>


    <string name="title_activity_main">Sample Fitbit Client!</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="scopes_granted_format">Scopes Granted: %s</string>
    <string name="user_info">User</string>
    <string name="activity_info">Activity</string>
    <string name="weight">Weight</string>
    <string name="hello_format">Hello %s!</string>
    <string name="devices">Devices</string>
    <string name="welcome">Welcome!</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
    <string name="error_loading_devices_format">Error loading devices: %s</string>
    <string name="error_loading_activities_format">Error loading user activities: %s</string>
    <string name="error_loading_user_format">Error loading user: %s</string>
    <string name="scopes_missing_format">`%s` scope(s) required to function correctly.</string>
    <string name="login_title">Login</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_dismissed">Login dismissed or no scopes selected</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_data">Error loading data. Check your internet connection and try
        again later.
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
